--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-
 /* Estilos CSS */
 * {
   margin: 0;
@@ -7,94 +5,108 @@
   font-family: "Inter", sans-serif;
   box-sizing: border-box;
 }
-* {
-  box-sizing: border-box;
-}
+
 body {
   background: #f5f7fd;
-  font-family: "Inter", sans-serif;
   font-size: 14px;
   font-weight: 400;
-  color: #fff; /* Cambiado a blanco para mejorar la visibilidad */
+  color: #fff;
   text-align: center;
   display: flex;
   align-items: center;
   flex-direction: column;
   margin-top: 40px;
   background-image: url('fondo.png'); 
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
-  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
-  background-position: center; /* Centra la imagen */
-  min-height: 100vh; /* Asegura que el body ocupe al menos la altura de la ventana del navegador */
-  background-position: center center; /* Centra la imagen en ambos ejes */
-  background-attachment: fixed; /* Fija la imagen de fondo para evitar que se desplace al hacer scroll */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh; 
+  background-attachment: fixed;
 }
 
 .content {
   text-align: center;
-  background-color: #a091c3; /* Fondo oscuro */
-  padding: 20px;
-  border-radius: 20px;
-  width: 90%; /* Cambiado a porcentaje para ser responsive */
-  max-width: 900px;
-  margin: 20px; /* Añadido margen para separar del borde del cuerpo */
+  background-color: #a091c3;
+  padding: 5%;
+  border-radius: 5%;
   width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
+  max-width: 1200px;
+  margin: 1% auto;
 }
 
 h1 {
   font-weight: 600;
-  font-size: 40px;
-  text-align: center;
-  margin: 20px;
-  color: #0c0b0b; /* Texto blanco */
+  font-size: 3rem;
   color: #fff;
+  margin: 1%;
 }
 
 h3 span {
-  color: #0730c5; /* Color de resaltado */
+  color: #0730c5;
 }
-.container {
-  width: 100%;
+
+.container, .division {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Centrar los contenedores */
-  margin-top: 20px;
-}
-
-.drop-area {
-  width: 100%; /* Cambiado a 100% para ser responsive */
-  flex-direction: column;
-  align-items: center;
-  height: auto;
-}
-
-.drop-area {
+  justify-content: space-between;
+  margin-top: 5%;
   width: 100%;
+  /* Por defecto se colocan uno al lado del otro */
+}
 
-  text-align: center;
+.drop-area, .container2 {
   flex: 1;
-  margin: 10px 0; /* Espacio entre los contenedores */
-  border: 2px dashed #0730c5;
-  box-sizing: border-box; /* El borde se incluye en el ancho y alto del contenedor */
-  border-radius: 15px;
+  margin: 10px;
+  min-width: 0; /* Esto evita que el contenido se desborde */
+}
+
+@media only screen and (max-width: 768px) {
+  .container, .division {
+    /* En pantallas pequeñas, se colocan uno encima del otro */
+    flex-direction: column;
+  }
+  .drop-area, .container2 {
+    width: 100%;
+    margin: 10px 0;
+  }
+}
+
+.drop-area {
+  text-align: center;
+  border: 3px dashed #0730c5;
+  border-radius: 5%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   position: relative;
   transition: all .1s ease-in;
-  background-color: #522f65; /* Fondo oscuro */
+  background-color: #522f65;
+  padding: 20px;
 }
-.drop-area:hover{
-  scale: 0.995;
+
+.drop-area:hover {
+  transform: scale(0.995);
   opacity: 0.6;
   filter: brightness(0.5);
 }
 
-#form{
-  width: 100%; /* Cambiado a 100% para ser responsive */
+.drop-area2 {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  border: 2px dashed #0730c5;
+  border-radius: 5%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  transition: all .1s ease-in;
+}
+
+#form {
+  width: 100%;
   height: 400px;
   position: relative;
   display: flex;
@@ -102,7 +114,8 @@ h3 span {
   align-items: center;
   flex-direction: column;
 }
-.file-input{
+
+.file-input {
   position: absolute;
   top: 0;
   left: 0;
@@ -113,13 +126,13 @@ h3 span {
   z-index: 1;
 }
 
-form p{
-  color: #fff; /* Cambiado a blanco para mejorar la visibilidad */
+form p {
+  color: #fff;
 }
 
-.Btn{
+.Btn {
   background-color: #0730c5;
-  z-index: 2; /* Superpone en el index */
+  z-index: 2;
   display: flex;
   align-items: center;
   height: 30px;
@@ -133,72 +146,73 @@ form p{
 }
 
 .container2 {
-  flex: 1;
-  box-sizing: border-box; /* El borde se incluye en el ancho y alto del contenedor */
-  border-radius: 15px;
+  background-color: #603b74;
+  max-height: 430px; /* Ajusta la altura máxima según sea necesario */
+  overflow-y: auto; /* Habilita el desplazamiento vertical */
+  padding: 3%;
+  border-radius: 5%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  padding: 5px 20px;
-  background-color: #603b74; /* Fondo oscuro */
-  max-height: 430px;
-  overflow-y: auto;
-  width: 100%; /* Cambiado a 100% para ser responsive */
   position: relative;
-  width: 100%;
 }
 
-.btn-abrir-directorio {
-  background-color: #0730c5;
-  color: #fff;
+
+.btn-abrir-directorio-fixed {
+  background-color: #cc901f;
+  color: #1e12be;
   padding: 10px 20px;
   border-radius: 5px;
   text-decoration: none;
-  position: absolute; /* Posicionamiento absoluto */
-  bottom: 10px; /* Alinea el botón con la parte inferior del contenedor */
-  right: 10px; /* Alinea el botón con el borde derecho del contenedor */
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
   transition: background-color 0.3s ease;
 }
 
+.btn-abrir-directorio-fixed:hover {
+  background-color: #b9152b;
+}
+
 .btn_delete {
-  border: 2px solid orange; /* Borde de 2px sólido naranja */
-  padding: 5px 10px; /* Ajuste del padding para mayor comodidad */
-  background: none; /* Fondo transparente */
-  color: orange; /* Texto naranja */
+  border: 2px solid orange;
+  padding: 5px 10px;
+  background: none;
+  color: orange;
   cursor: pointer;
-  border-radius: 5px; /* Borde redondeado */
-  transition: background-color 0.3s ease; /* Efecto de transición al pasar el ratón */
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
 .btn_delete:hover {
-  background-color: rgba(255, 165, 0, 0.2); /* Cambio de color de fondo al pasar el ratón */
+  background-color: rgba(255, 165, 0, 0.2);
 }
 
-
-.archivos_subidos{
+.archivos_subidos {
   display: flex;
   justify-content: space-between;
-  background: #634f6e; /* Fondo oscuro */
+  background: #634f6e;
   padding: 12px;
   border-radius: 8px;
   margin-bottom: 8px;
-  align-items: center; 
+  align-items: center;
+  overflow: hidden; /* Asegúrate de que el contenido no se desborde */
 }
+
+
 .archivos_subidos:hover {
-  box-shadow: 0 0 10px -2px #d3d6f6;
+  box-shadow: 0 0 10px 0px #d3d6f6;
 }
+
 .archivos_subidos div {
   overflow: hidden;
 }
+
 .archivos_subidos a {
-  color: white; /* Cambia el color del texto a blanco */
-  font-size: 16px; /* Ajusta el tamaño del texto según tus preferencias */
-  
+  color: white;
+  font-size: 16px;
 }
 
-.beta{
-
-  background: #d90a0a;
+.beta {
   background: #3823da;
   font-size: 1.2rem;
   border-radius: 6px;
@@ -206,31 +220,26 @@ form p{
   padding: 0 12px;
 }
 
-
-/* Estilos para dispositivos móviles */
-@media only screen and (max-width: 768px) {
-  .content {
-    width: 90%; /* Reducir el ancho para adaptarse a pantallas más pequeñas */
-  }
-
-  .container {
-    flex-direction: column; /* Cambiar a disposición de columna en dispositivos móviles */
-  }
-
-  .drop-area {
-    width: 90%; /* Reducir el ancho para adaptarse a pantallas más pequeñas */
-  }
-
-  #form {
-    width: 90%; /* Reducir el ancho para adaptarse a pantallas más pequeñas */
-  }
-
-  .container2 {
-    width: 90%; /* Reducir el ancho para adaptarse a pantallas más pequeñas */
-  }
-}
-
-img {
+img, .icon {
   max-width: 100%;
   height: auto;
+}
+.boton-descargar {
+  color: white;
+  font-size: 10%; /* Ajusta el tamaño del texto aquí */
+  word-break: break-all; /* Romper palabras largas si es necesario */
+  text-decoration: none; /* Eliminar subrayado si lo deseas */
+  padding: 10px; /* Agrega espacio alrededor del texto */
+  display: inline-block; /* Asegura que el padding funcione correctamente */
+}
+
+.boton-descargar:hover {
+  text-decoration: underline; /* Opcional: agregar subrayado al pasar el ratón */
+}
+.btn-container {
+  position: sticky; /* Cambia a sticky para que se mantenga visible al hacer scroll */
+  bottom: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
 }
