--- a/estilos.css
+++ b/estilos.css
@@ -7,21 +7,16 @@
 }
 
 body {
-  background: #f5f7fd;
+  background: #f5f7fd url('fondo.png') no-repeat center center fixed;
+  background-size: cover;
   font-size: 14px;
-  font-weight: 400;
   color: #fff;
   text-align: center;
   display: flex;
   align-items: center;
   flex-direction: column;
   margin-top: 40px;
-  background-image: url('fondo.png'); 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 100vh; 
-  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 .content {
@@ -51,18 +46,16 @@ h3 span {
   justify-content: space-between;
   margin-top: 5%;
   width: 100%;
-  /* Por defecto se colocan uno al lado del otro */
 }
 
 .drop-area, .container2 {
   flex: 1;
   margin: 10px;
-  min-width: 0; /* Esto evita que el contenido se desborde */
+  min-width: 0;
 }
 
 @media only screen and (max-width: 768px) {
   .container, .division {
-    /* En pantallas pequeñas, se colocan uno encima del otro */
     flex-direction: column;
   }
   .drop-area, .container2 {
@@ -80,7 +73,7 @@ h3 span {
   flex-direction: column;
   align-items: center;
   position: relative;
-  transition: all .1s ease-in;
+  transition: all 0.1s ease-in;
   background-color: #522f65;
   padding: 20px;
 }
@@ -89,20 +82,6 @@ h3 span {
   transform: scale(0.995);
   opacity: 0.6;
   filter: brightness(0.5);
-}
-
-.drop-area2 {
-  width: 100%;
-  text-align: center;
-  padding: 10px;
-  border: 2px dashed #0730c5;
-  border-radius: 5%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  transition: all .1s ease-in;
 }
 
 #form {
@@ -130,44 +109,30 @@ form p {
   color: #fff;
 }
 
-.Btn {
+.Btn, .btn-abrir-directorio-fixed {
   background-color: #0730c5;
-  z-index: 2;
-  display: flex;
-  align-items: center;
-  height: 30px;
-  width: 150px;
-  justify-content: center;
-  text-align: center;
-  border-radius: 10px;
-  cursor: pointer;
   color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
   border: none;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.Btn:hover, .btn-abrir-directorio-fixed:hover {
+  background-color: #0527a7;
 }
 
 .container2 {
   background-color: #603b74;
-  max-height: 430px; /* Ajusta la altura máxima según sea necesario */
-  overflow-y: auto; /* Habilita el desplazamiento vertical */
+  max-height: 430px;
+  overflow-y: auto;
   padding: 3%;
   border-radius: 5%;
   display: flex;
   flex-direction: column;
   position: relative;
-}
-
-
-.btn-abrir-directorio-fixed {
-  background-color: #0730c5;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 5px;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-.btn-abrir-directorio-fixed:hover {
-  background-color: #0527a7;
 }
 
 .btn_delete {
@@ -192,9 +157,8 @@ form p {
   border-radius: 8px;
   margin-bottom: 8px;
   align-items: center;
-  overflow: hidden; /* Asegúrate de que el contenido no se desborde */
+  overflow: hidden;
 }
-
 
 .archivos_subidos:hover {
   box-shadow: 0 0 10px 0px #d3d6f6;
@@ -207,6 +171,14 @@ form p {
 .archivos_subidos a {
   color: white;
   font-size: 16px;
+  word-break: break-all;
+  text-decoration: none;
+  display: inline-block;
+  padding-right: 10px;
+}
+
+.archivos_subidos a:hover {
+  text-decoration: underline;
 }
 
 .beta {
@@ -221,19 +193,9 @@ img, .icon {
   max-width: 100%;
   height: auto;
 }
-.boton-descargar {
-  color: white;
-  font-size: 10%; /* Ajusta el tamaño del texto aquí */
-  word-break: break-all; /* Romper palabras largas si es necesario */
-  text-decoration: none; /* Eliminar subrayado si lo deseas */
-  padding:  0 10 0 0; /* Agrega espacio alrededor del texto */
-  display: inline-block; /* Asegura que el padding funcione correctamente */
-}
 
-.boton-descargar:hover {
-  text-decoration: underline; /* Opcional: agregar subrayado al pasar el ratón */
-}
 .btn-container {
   bottom: 10px;
   width: 100%;
+  text-align: center;
 }
