--- a/estilos.css
+++ b/estilos.css
@@ -199,3 +199,18 @@ img, .icon {
   width: 100%;
   text-align: center;
 }
+
+/* Añadir dimensiones fijas para las imágenes y elementos multimedia */
+.background-image {
+  width: 100%;
+  height: 400px; /* Ajustar según sea necesario */
+  background: url('fondo.png') no-repeat center center fixed;
+  background-size: cover;
+}
+
+/* Reservar espacio para fuentes personalizadas */
+@font-face {
+  font-family: "Inter";
+  src: url('path/to/inter-font.woff2') format('woff2');
+  font-display: swap;
+}
