--- a/estilos.css
+++ b/estilos.css
@@ -21,7 +21,7 @@ body {
 
 .content {
   text-align: center;
-  background-color: #a091c3;
+  background-color: #1e8eaa;
   padding: 5%;
   border-radius: 5%;
   width: 90%;
@@ -74,7 +74,7 @@ h3 span {
   align-items: center;
   position: relative;
   transition: all 0.1s ease-in;
-  background-color: #522f65;
+  background: #57bbbb;
   padding: 20px;
 }
 
@@ -110,7 +110,7 @@ form p {
 }
 
 .Btn, .btn-abrir-directorio-fixed {
-  background-color: #0730c5;
+  background-color: #0d7916;
   color: white;
   padding: 10px 20px;
   border-radius: 5px;
@@ -121,11 +121,11 @@ form p {
 }
 
 .Btn:hover, .btn-abrir-directorio-fixed:hover {
-  background-color: #0527a7;
+  background-color: #12790e;
 }
 
 .container2 {
-  background-color: #603b74;
+  background-color: #48aca7;
   max-height: 430px;
   overflow-y: auto;
   padding: 3%;
@@ -136,23 +136,23 @@ form p {
 }
 
 .btn_delete {
-  border: 2px solid orange;
+  border: 2px solid rgb(192, 31, 31);
   padding: 5px 10px;
   background: none;
-  color: orange;
+  color: rgb(165, 33, 33);
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
 .btn_delete:hover {
-  background-color: rgba(255, 165, 0, 0.2);
+  background-color: rgba(216, 18, 18, 0.63);
 }
 
 .archivos_subidos {
   display: flex;
   justify-content: space-between;
-  background: #634f6e;
+  background: #11a5a5;
   padding: 12px;
   border-radius: 8px;
   margin-bottom: 8px;
@@ -182,7 +182,7 @@ form p {
 }
 
 .beta {
-  background: #3823da;
+  background: #5c4bd8;
   font-size: 1.2rem;
   border-radius: 6px;
   display: inline-block;
@@ -210,7 +210,8 @@ img, .icon {
 
 /* Reservar espacio para fuentes personalizadas */
 @font-face {
-  font-family: "Inter";
-  src: url('path/to/inter-font.woff2') format('woff2');
-  font-display: swap;
+  font-family: 'Inter';
+  src: url('/fonts/inter-font.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
